--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile project(':textbannerlibrary')
-//    compile 'com.superluo:textbannerview:1.0.1'
+//    compile project(':textbannerlibrary')
+    compile 'com.superluo:textbannerview:1.0.1'
 }
