修复bug；改用Android studio3.1.3编译项目

--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,49 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.novoda:bintray-release:0.8.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
+
+    tasks.withType(Javadoc) {
+        options{ encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
+    /**Xlint:deprecation检验过时api*/
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
+
+
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-tasks.getByPath(":textbannerlibrary:mavenAndroidJavadocs").enabled = false
+tasks.getByPath(":textbannerlibrary:releaseAndroidJavadocs").enabled = false
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet') //忽略javadoc错误
+    options{
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        links "http://docs.oracle.com/javase/7/docs/api"
+    }
+}
