--- a/textbannerlibrary/build.gradle
+++ b/textbannerlibrary/build.gradle
@@ -1,14 +1,16 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
 
+    lintOptions {
+        abortOnError false
+    }
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 26
+        versionCode 3
+        versionName "1.0.3"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -19,15 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
 
 publish {
@@ -35,9 +34,10 @@ publish {
     repoName = 'superProject2'
     groupId = 'com.superluo'
     artifactId = 'textbannerview'
-    publishVersion = '1.0.2'
+    publishVersion = '1.0.3'
     desc = 'this is a nice TextBannerView description for a project'
     website = 'https://github.com/zsml2016/TextBannerView'
-//compile 'com.superluo:textbannerview:1.0.2'
+//compile 'com.superluo:textbannerview:1.0.3'
 }
+
 
