--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     implementation "com.android.support:design:26.1.0"
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-//    implementation project(':textbannerlibrary')
-    implementation 'com.superluo:textbannerview:1.0.4'
+    implementation project(':textbannerlibrary')
+//    implementation 'com.superluo:textbannerview:1.0.5'
 }
